err/clearwind.arecibo.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/clearwind'...
Listing './lib/python3.5/site-packages/clearwind/arecibo'...
Listing './lib/python3.5/site-packages/clearwind/arecibo/Extensions'...
Listing './lib/python3.5/site-packages/clearwind/arecibo/browser'...
Listing './lib/python3.5/site-packages/clearwind/arecibo/lib'...
Compiling './lib/python3.5/site-packages/clearwind/arecibo/lib/arecibo.py'...
***   File "./lib/python3.5/site-packages/clearwind/arecibo/lib/arecibo.py", line 36
    raise ValueError, "Unknown value: %s" % key
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/clearwind/arecibo/lib/simplejson'...
Compiling './lib/python3.5/site-packages/clearwind/arecibo/lib/simplejson/tool.py'...
***   File "./lib/python3.5/site-packages/clearwind/arecibo/lib/simplejson/tool.py", line 37
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/clearwind/arecibo/profiles'...
Listing './lib/python3.5/site-packages/clearwind/arecibo/profiles/default'...
Listing './lib/python3.5/site-packages/clearwind.arecibo-0.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
